// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charges renders Diamond correctly 1`] = `
<React.Fragment>
  <G
    id="charge-diamond-1"
  >
    <Polygon
      fill="#c00"
      points="150,200 300,100 450,200 300,300"
    />
  </G>
</React.Fragment>
`;

exports[`Charges renders Flower correctly 1`] = `
<React.Fragment>
  <G
    id="charge-flower-5"
  >
    <G
      transform="rotate(90 300 200)"
    >
      <Path
        d="M 300,300 Q 341.1,256.6 323.5,232.4 Q 341.1,256.6 395.1,230.9 Q 366.6,178.4 338,187.6 Q 366.6,178.4 358.8,119.1 Q 300,130 300,160 Q 300,130 241.2,119.1 Q 233.4,178.4 262,187.6 Q 233.4,178.4 204.9,230.9 Q 258.9,256.6 276.5,232.4 Q 258.9,256.6 300,300"
        fill="#0c0"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Flower correctly 2`] = `
<React.Fragment>
  <G
    id="charge-flower-8"
  >
    <G
      transform="rotate(0 300 200)"
    >
      <Path
        d="M 300,300 Q 330.6,273.9 323,255.4 Q 330.6,273.9 370.7,270.7 Q 373.9,230.6 355.4,223 Q 373.9,230.6 400,200 Q 373.9,169.4 355.4,177 Q 373.9,169.4 370.7,129.3 Q 330.6,126.1 323,144.6 Q 330.6,126.1 300,100 Q 269.4,126.1 277,144.6 Q 269.4,126.1 229.3,129.3 Q 226.1,169.4 244.6,177 Q 226.1,169.4 200,200 Q 226.1,230.6 244.6,223 Q 226.1,230.6 229.3,270.7 Q 269.4,273.9 277,255.4 Q 269.4,273.9 300,300"
        fill="#0c0"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Pall correctly 1`] = `
<React.Fragment>
  <G
    id="charge-pall-1"
  >
    <Svg
      height={400}
      preserveAspectRatio="xMidYMid meet"
      width={600}
    >
      <Rect
        fill="#0c0"
        height={100}
        width={300}
        x={300}
        y={150}
      />
      <Rect
        fill="#0c0"
        height={100}
        transform="rotate(213.69006752597977 300 200)"
        width={360.5551275463989}
        x={300}
        y={150}
      />
      <Rect
        fill="#0c0"
        height={100}
        transform="rotate(146.30993247402023 300 200)"
        width={360.5551275463989}
        x={300}
        y={150}
      />
    </Svg>
  </G>
</React.Fragment>
`;

exports[`Charges renders Star correctly 1`] = `
<React.Fragment>
  <G
    id="charge-star-5"
  >
    <G
      transform="rotate(90 300 200)"
    >
      <Polygon
        fill="#0c0"
        points="300,300 323.5,232.4 395.1,230.9 338,187.6 358.8,119.1 300,160 241.2,119.1 262,187.6 204.9,230.9 276.5,232.4"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Star correctly 2`] = `
<React.Fragment>
  <G
    id="charge-star-8"
  >
    <G
      transform="rotate(0 300 200)"
    >
      <Polygon
        fill="#0c0"
        points="300,300 323,255.4 370.7,270.7 355.4,223 400,200 355.4,177 370.7,129.3 323,144.6 300,100 277,144.6 229.3,129.3 244.6,177 200,200 244.6,223 229.3,270.7 277,255.4"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Stripes correctly 1`] = `
<React.Fragment>
  <G
    id="charge-stripes-serrated"
  >
    <G
      transform="translate(0 -100)"
    >
      <Svg
        height={600}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 400 400"
        width={600}
      >
        <Polygon
          fill="#00c"
          points="0,150 100,125 200,150 300,175 400,150 400,250 300,275 200,250 100,225 0,250"
        />
      </Svg>
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Stripes correctly 2`] = `
<React.Fragment>
  <G
    id="charge-stripes-wavy"
  >
    <G
      transform="translate(0 -100)"
    >
      <Svg
        height={600}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 400 400"
        width={600}
      >
        <Path
          d="M 0 150 A 200 200 0 0 1 200 150 A 200 200 0 0 0 400 150 L 400 250 A 200 200 0 0 1 200 250 A 200 200 0 0 0 0 250 Z"
          fill="#c00"
        />
      </Svg>
    </G>
  </G>
</React.Fragment>
`;
